crates/tui/src/ui/snapshots/ms_todo_tui__ui__tests__the_link_picker_lists_each_link_and_marks_one_that_wont_open.snap
---
source: crates/tui/src/ui/tests.rs
expression: render(&app)
---
" ms-todo 9.9.9 · Home                                                                                ● synced "
"╭ Lists ───────────────╮╭ Home ────────────────────────────────────────────╮╭ Detail ────────────────────────╮"
"│☼ My Day              ││○ Pay rent                         Oct 1 ★ ↻      ││Title      Pay rent             │"
"│» Next                ││○ Call Sam                                      ◌ ││                                │"
"│★ Important     ╭ Links ───────────────────────────────────────────────────────────────────╮                │"
"│▦ Planned       │The email  https://mail.example.com/1                                     │                │"
"│∞ All           │javascript:alert(1)  javascript:alert(1)  (won't open)                    │ Oct 2026       │"
"│◔ Assigned      │docs  https://docs.example.com                                            │                │"
"│⧖ Upcoming      │                                                                          │                │"
"│… Someday       │Linked resources first, then the notes                                    │                │"
"│✓ Completed     ╰──────────────────────────────────────────────────────────────────────────╯                │"
"│≡ Tasks               ││                                                  ││Repeats    monthly on day 1     │"
"│≡ Home               3││                                                  ││Steps      none                 │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ● daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" Enter Open  y Copy  Esc Cancel                                                                               "
