crates/tui/src/ui/snapshots/ms_todo_tui__ui__tests__the_notes_editor_takes_several_lines.snap
---
source: crates/tui/src/ui/tests.rs
expression: terminal.backend().to_string()
---
" ms-todo 9.9.9 · Home                                                                                ● synced "
"╭ Lists ───────────────╮╭ Home ────────────────────────────────────────────╮╭ Detail ────────────────────────╮"
"│☼ My Day              ││○ Pay rent                         Oct 1 ★ ↻      ││Title      Pay rent             │"
"│» Next                ││○ Call Sam                                      ◌ ││                                │"
"│★ Important          1││○ Water plants                                  ✗ ││Status     open                 │"
"│▦ Planned            2││✓ Ship blueprint                                  ││List       Home                 │"
"│∞ All                3││                                                  ││Due        Thu 1 Oct 2026       │"
"│◔ Assigned            ││                                                  ││Start      none                 │"
"│⧖ Upcoming            ││                                                  ││Reminder   none                 │"
"│… Someday             ││                                                  ││Importance high                 │"
"│✓ Completed          1││                                                  ││Assignee   none                 │"
"│≡ Tasks               ││                                                  ││Defer      none                 │"
"│≡ Home               3││                                                  ││Repeat     monthly on day 1     │"
"│                      ││                                                  ││Steps      none                 │"
"│                      ││                                                  ││Link       none                 │"
"│                      ││                                                  ││Files      none                 │"
"│                      ││                                                  ││Sync       synced               │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ● daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" Edit notes:  Ctrl-s Save  Enter New line  Esc Cancel  ←/→ Move                                               "
