crates/tui/src/ui/snapshots/ms_todo_tui__ui__tests__the_palette.snap
---
source: crates/tui/src/ui/tests.rs
expression: "format!(\"{everything}\\n{}\", render(&app))"
---
" ms-todo 9.9.9 · Home    ╭ Palette ─────────────────────────────────────────────────╮                ● synced "
"╭ Lists ───────────────╮╭│: █                                                       │────────────────────────╮"
"│☼ My Day              │││                                                          │   Pay rent             │"
"│» Next                │││Add                                                      a│                        │"
"│★ Important          1│││Done                                                     x│   open                 │"
"│▦ Planned            2│││Edit                                                     e│   Home                 │"
"│∞ All                3│││Delete                                                   d│   Thu 1 Oct 2026       │"
"│◔ Assigned            │││Set due date…                                            S│   none                 │"
"│⧖ Upcoming            │││Reschedule overdue to…                                   R│   none                 │"
"│… Someday             │││Move to list…                                            m│ce high                 │"
"│✓ Completed          1│││Select                                                   v│   none                 │"
"│≡ Tasks               │││Select all                                               V│   none                 │"
"│≡ Home               3│││Undo                                                     u│   monthly on day 1     │"
"╰──────────────────────╯╰│Filter                                                   /│────────────────────────╯"
" ● daemon  ·  synced 12s │Clear selection or filter                              Esc│                         "
" Enter Run  Esc Close    ╰──────────────────────────────────────────────────────────╯                         "

" ms-todo 9.9.9 · Home    ╭ Palette ─────────────────────────────────────────────────╮                ● synced "
"╭ Lists ───────────────╮╭│: go█                                                     │────────────────────────╮"
"│☼ My Day              │││                                                          │   Pay rent             │"
"│» Next                │││Go to My Day                                              │                        │"
"│★ Important          1│││Go to Next                                                │   open                 │"
"│▦ Planned            2│││Go to Important                                           │   Home                 │"
"│∞ All                3│││Go to Planned                                             │   Thu 1 Oct 2026       │"
"│◔ Assigned            │││Go to All                                                 │   none                 │"
"│⧖ Upcoming            │││Go to Assigned                                            │   none                 │"
"│… Someday             │││Go to Upcoming                                            │ce high                 │"
"│✓ Completed          1│││Go to Someday                                             │   none                 │"
"│≡ Tasks               │││Go to Completed                                           │   none                 │"
"│≡ Home               3│││Go to Tasks                                               │   monthly on day 1     │"
"╰──────────────────────╯╰│Go to Home                                                │────────────────────────╯"
" ● daemon  ·  synced 12s │Diagnostics                                              D│                         "
" Enter Run  Esc Close    ╰──────────────────────────────────────────────────────────╯                         "
