crates/tui/src/ui/snapshots/ms_todo_tui__ui__tests__the_resolved_date_shows_under_the_input.snap
---
source: crates/tui/src/ui/tests.rs
expression: "frames.join(\"\\n\\n\")"
---
││Due        next fri█            │"
││           → Fri 2 Oct          │"
││Start      none                 │"

││Due        yesterday█           │"
││           → Wed 23 Sep, in the │"
││past                            │"

││Due        tomo█                │"
││           Didn't understand    │"
││"tomo"                          │"
