crates/tui/src/ui/snapshots/ms_todo_tui__ui__tests__the_selection_is_marked_and_counted.snap
---
source: crates/tui/src/ui/tests.rs
expression: "format!(\"{selected}\\n{}\", last(&confirming))"
---
" ms-todo 9.9.9 · Home                                                                                ● synced "
"╭ Lists ───────────────╮╭ Home ─────────────────────────────────────── 3/4 ╮╭ Detail ────────────────────────╮"
"│☼ My Day              ││○ ◆ Pay rent                       Oct 1 ★ ↻      ││Title      Water plants         │"
"│» Next                ││○ Call Sam                                      ◌ ││                                │"
"│★ Important          1││○ ◆ Water plants                                ✗ ││Status     open                 │"
"│▦ Planned            2││✓ Ship blueprint                                  ││List       Home                 │"
"│∞ All                3││                                                  ││Due        none                 │"
"│◔ Assigned            ││                                                  ││Reminder   none                 │"
"│⧖ Upcoming            ││                                                  ││Importance normal               │"
"│… Someday             ││                                                  ││Assignee   none                 │"
"│✓ Completed          1││                                                  ││Defer      none                 │"
"│≡ Tasks               ││                                                  ││Steps      none                 │"
"│≡ Home               3││                                                  ││Link       none                 │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ◆ 2 selected  ·  ● daemon  ·  synced 12s ago  ·  all changes sent                                            "
" a Add  x Done  e Edit  d Delete  v Select  u Undo  / Filter  : Palette  r Sync  ? Help  q Quit  o Open link  "

" Delete 2 tasks?  y Delete  n Keep                                                                            "
