crates/tui/src/ui/snapshots/ms_todo_tui__ui__tests__the_sidebar_with_folders_in_ascii.snap
---
source: crates/tui/src/ui/tests.rs
expression: render(&app)
---
" ms-todo 9.9.9 · Home                                                                                + synced "
"╭ Lists ───────────────╮╭ Home ─────────────────────────────────────── 1/4 ╮╭ Detail ────────────────────────╮"
"│o My Day              ││[ ] Pay rent                       Oct 1 ! R      ││Title      Pay rent             │"
"│> Next                ││[ ] Call Sam                                    ~ ││                                │"
"│! Important          1││[ ] Water plants                                X ││Status     open                 │"
"│# Planned            2││[x] Ship blueprint                                ││List       Home                 │"
"│* All                3││                                                  ││Due        Thu 1 Oct 2026       │"
"│w Assigned            ││                                                  ││Reminder   none                 │"
"│u Upcoming            ││                                                  ││Importance high                 │"
"│s Someday             ││                                                  ││Assignee   none                 │"
"│x Completed          1││                                                  ││Defer      none                 │"
"│v Areas              5││                                                  ││Repeats    monthly on day 1     │"
"│  - Home             3││                                                  ││Steps      none                 │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" + daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" a Add  x Done  e Edit  d Delete  v Select  u Undo  / Filter  : Palette  r Sync  ? Help  q Quit  o Open link  "
