crates/tui/src/ui/snapshots/ms_todo_tui__ui__tests__the_sidebar_with_folders_one_collapsed.snap
---
source: crates/tui/src/ui/tests.rs
expression: shown
---
" ms-todo 9.9.9 · Home                                                                                ● synced "
"╭ Lists ───────────────╮╭ Home ────────────────────────────────────────────╮╭ Detail ────────────────────────╮"
"│☼ My Day              ││○ Pay rent                         Oct 1 ★ ↻      ││Title      Pay rent             │"
"│» Next                ││○ Call Sam                                      ◌ ││                                │"
"│★ Important          1││○ Water plants                                  ✗ ││Status     open                 │"
"│▦ Planned            2││✓ Ship blueprint                                  ││List       Home                 │"
"│∞ All                3││                                                  ││Due        Thu 1 Oct 2026       │"
"│◔ Assigned            ││                                                  ││Reminder   none                 │"
"│⧖ Upcoming            ││                                                  ││Importance high                 │"
"│… Someday             ││                                                  ││Assignee   none                 │"
"│✓ Completed          1││                                                  ││Defer      none                 │"
"│▾ Areas              5││                                                  ││Repeats    monthly on day 1     │"
"│  ≡ Home             3││                                                  ││Steps      none                 │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ● daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" Enter Open or fold  a Add  u Undo  / Filter  : Palette  r Sync  ? Help  q Quit                               "
" ms-todo 9.9.9 · Home                                                                                ● synced "
"╭ Lists ───────────────╮╭ Home ────────────────────────────────────────────╮╭ Detail ────────────────────────╮"
"│☼ My Day              ││○ Pay rent                         Oct 1 ★ ↻      ││Title      Pay rent             │"
"│» Next                ││○ Call Sam                                      ◌ ││                                │"
"│★ Important          1││○ Water plants                                  ✗ ││Status     open                 │"
"│▦ Planned            2││✓ Ship blueprint                                  ││List       Home                 │"
"│∞ All                3││                                                  ││Due        Thu 1 Oct 2026       │"
"│◔ Assigned            ││                                                  ││Reminder   none                 │"
"│⧖ Upcoming            ││                                                  ││Importance high                 │"
"│… Someday             ││                                                  ││Assignee   none                 │"
"│✓ Completed          1││                                                  ││Defer      none                 │"
"│▾ Areas              5││                                                  ││Repeats    monthly on day 1     │"
"│  ≡ Home             3││                                                  ││Steps      none                 │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ● daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" Move Home to folder: Ar█  Areas  Enter Move  Tab Complete  Esc Cancel  Enter on empty: no folder             "
