crates/tui/src/ui/snapshots/ms_todo_tui__ui__tests__the_theme_picker_lists_every_theme.snap
---
source: crates/tui/src/ui/tests.rs
expression: render(&app)
---
" ms-todo 9.9.9 · Home           ╭ Theme ─────────────────────────────────────╮                       ● synced "
"╭ Lists ───────────────╮╭ Home ─│terminal                                    │Detail ────────────────────────╮"
"│☼ My Day              ││○ Pay r│catppuccin-mocha                            │itle      Pay rent             │"
"│» Next                ││○ Call │catppuccin-latte                            │                               │"
"│★ Important          1││○ Water│gruvbox-dark                                │tatus     open                 │"
"│▦ Planned            2││✓ Ship │gruvbox-light                               │ist       Home                 │"
"│∞ All                3││       │tokyo-night                                 │ue        Thu 1 Oct 2026       │"
"│◔ Assigned            ││       │nord                                        │eminder   none                 │"
"│⧖ Upcoming            ││       │one-dark                                    │mportance high                 │"
"│… Someday             ││       │kanagawa                                    │ssignee   none                 │"
"│✓ Completed          1││       │night-owl                                   │efer      none                 │"
"│≡ Tasks               ││       │cobalt2                                     │epeats    monthly on day 1     │"
"│≡ Home               3││       │high-contrast                               │teps      none                 │"
"╰──────────────────────╯╰───────│                                            │───────────────────────────────╯"
" ● daemon  ·  synced 12s ago  · │Enter keeps it in config.toml; Esc goes back│                                "
" Enter Keep  Esc Revert         ╰────────────────────────────────────────────╯                                "
