crates/tui/src/ui/snapshots/ms_todo_tui__ui__tests__the_undo_picker.snap
---
source: crates/tui/src/ui/tests.rs
expression: render(&app)
---
" ms-todo 9.9.9 · Home                                                                                ● synced "
"╭ Lists ───────────────╮╭ Home ────────────────────────────────────────────╮╭ Detail ────────────────────────╮"
"│☼ My Day              ││○ Pay rent                         Oct 1 ★ ↻      ││Title      Pay rent             │"
"│» Next                ││○ Call Sam                                      ◌ ││                                │"
"│★ Important          1││○ Water plants                                  ✗ ││Status     open                 │"
"│▦ Planned          ╭ Which completed copy to delete? ───────────────────────────────────╮me                 │"
"│∞ All              │Undo deletes the completed copy you pick:                           │u 1 Oct 2026       │"
"│◔ Assigned         │                                                                    │ne                 │"
"│⧖ Upcoming         │Pay rent  Home  created 2026-09-24 10:00                            │ne                 │"
"│… Someday          │Pay rent  Home  created 2026-09-24 10:01                            │gh                 │"
"│✓ Completed        ╰────────────────────────────────────────────────────────────────────╯ne                 │"
"│≡ Tasks               ││                                                  ││Defer      none                 │"
"│≡ Home               3││                                                  ││Repeat     monthly on day 1     │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ● daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" Enter Delete this copy  Esc Cancel                                                                           "
